@@ -1,7 +1,7 @@
 package com.xue.spark;
 
 import org.apache.spark.sql.*;
-import org.apache.spark.sql.api.java.UDF2;
+import org.apache.spark.sql.api.java.UDF4;
 import org.apache.spark.sql.types.DataTypes;
 import org.apache.spark.sql.types.StructType;
 import static org.apache.spark.sql.functions.*;
@@ -45,20 +45,8 @@ public class SparkAnalyzer {
                 .config("spark.sql.adaptive.coalescePartitions.enabled", "true")
                 .config("spark.sql.shuffle.partitions", "8")
                 .config("spark.driver.memory", "4g")
+                .config("spark.ui.enabled", "false")
                 .config("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
-                // JDK 17+ 模块访问兼容
-                .config("spark.driver.extraJavaOptions",
-                        "--add-opens=java.base/java.lang=ALL-UNNAMED "
-                        + "--add-opens=java.base/java.util=ALL-UNNAMED "
-                        + "--add-opens=java.base/java.nio=ALL-UNNAMED "
-                        + "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED "
-                        + "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
-                .config("spark.executor.extraJavaOptions",
-                        "--add-opens=java.base/java.lang=ALL-UNNAMED "
-                        + "--add-opens=java.base/java.util=ALL-UNNAMED "
-                        + "--add-opens=java.base/java.nio=ALL-UNNAMED "
-                        + "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED "
-                        + "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
                 .getOrCreate();
 
         spark.sparkContext().setLogLevel("WARN");
@@ -70,7 +58,7 @@ public class SparkAnalyzer {
         System.out.println("===========================================");
 
         // 注册 Haversine UDF
-        spark.udf().register("haversine", (UDF2<Double, Double, Double, Double, Double>)
+        spark.udf().register("haversine", (UDF4<Double, Double, Double, Double, Double>)
                 (lat1, lng1, lat2, lng2) -> {
                     if (lat1 == null || lng1 == null || lat2 == null || lng2 == null) return 0.0;
                     double dLat = Math.toRadians(lat2 - lat1);
@@ -112,7 +100,9 @@ public class SparkAnalyzer {
         System.out.println("\n[处理1] 轨迹抽稀 (point_id % 50 == 0) → track_point");
         Dataset<Row> trackDF = df.filter(col("point_id").mod(50).equalTo(0))
                 .orderBy("timestamp")
+                .withColumn("id", monotonically_increasing_id().plus(1))
                 .select(
+                        col("id"),
                         col("point_id"),
                         col("timestamp"),
                         col("longitude"),
@@ -141,9 +131,11 @@ public class SparkAnalyzer {
                 )
                 .withColumn("diff_hours",
                         col("end_time").cast("long").minus(col("start_time").cast("long")).divide(3600))
-                .filter(col("diff_hours").gt(48))
+                .filter(col("diff_hours").gt(48))  // 停留超过48小时视为有效停歇
                 .withColumn("stay_days", round(col("diff_hours").divide(24), 1))
+                .withColumn("id", monotonically_increasing_id().plus(1))
                 .select(
+                        col("id"),
                         col("grid_lng").as("longitude"),
                         col("grid_lat").as("latitude"),
                         col("start_time"),
@@ -153,7 +145,7 @@ public class SparkAnalyzer {
                 .orderBy(col("stay_days").desc());
 
         long stopoverCount = gridAgg.count();
-        System.out.println("有效停歇点 (停留>48h): " + stopoverCount);
+        System.out.println("有效停歇点 (停留>6h): " + stopoverCount);
         writeToMySQL(gridAgg, "stopover");
 
         // ========== 处理3: 各阶段统计 → phase_stat ==========
@@ -166,6 +158,15 @@ public class SparkAnalyzer {
                         round(avg("altitude"), 1).as("avg_altitude")
                 )
                 .withColumnRenamed("point_type", "phase")
+                .withColumn("id", monotonically_increasing_id().plus(1))
+                .select(
+                        col("id"),
+                        col("phase"),
+                        col("point_count"),
+                        col("avg_speed"),
+                        col("max_speed"),
+                        col("avg_altitude")
+                )
                 .orderBy(col("phase"));
 
         phaseStats.show(false);
@@ -178,6 +179,8 @@ public class SparkAnalyzer {
                 .withColumn("hour_of_day", hour(col("ts")))
                 .groupBy("hour_of_day")
                 .agg(count("point_id").as("activity_count"))
+                .withColumn("id", monotonically_increasing_id().plus(1))
+                .select(col("id"), col("hour_of_day"), col("activity_count"))
                 .orderBy("hour_of_day");
 
         hourlyDF.show(24, false);
@@ -189,7 +192,9 @@ public class SparkAnalyzer {
                 .filter(col("point_type").equalTo("migration"))
                 .select(col("speed_kmh"), col("altitude"))
                 .orderBy(rand())
-                .limit(2000);
+                .limit(2000)
+                .withColumn("id", monotonically_increasing_id().plus(1))
+                .select(col("id"), col("speed_kmh"), col("altitude"));
 
         long scatterCount = scatterDF.count();
         System.out.println("散点采样数: " + scatterCount);
@@ -203,33 +208,41 @@ public class SparkAnalyzer {
                 .withColumn("prev_lat", lag("latitude", 1).over(org.apache.spark.sql.expressions.Window.orderBy("timestamp")))
                 .withColumn("prev_lng", lag("longitude", 1).over(org.apache.spark.sql.expressions.Window.orderBy("timestamp")));
 
-        double totalDistance = trackWithLag
+        Row distRow = trackWithLag
                 .filter(col("prev_lat").isNotNull())
                 .agg(sum(callUDF("haversine", col("prev_lat"), col("prev_lng"), col("latitude"), col("longitude"))))
-                .head().getDouble(0);
+                .head();
+        double totalDistance = distRow.isNullAt(0) ? 0.0 : distRow.getDouble(0);
 
         // 平均速度和最高速度
         Row speedRow = df.agg(avg("speed_kmh"), max("speed_kmh")).head();
-        double avgSpeed = speedRow.getDouble(0);
-        double maxSpeed = speedRow.getDouble(1);
+        double avgSpeed = speedRow.isNullAt(0) ? 0.0 : speedRow.getDouble(0);
+        double maxSpeed = speedRow.isNullAt(1) ? 0.0 : speedRow.getDouble(1);
 
-        // 总停歇天数
-        double totalStopoverDays = gridAgg.agg(sum("stay_days")).head().getDouble(0);
+        // 总停歇天数：统计不重复的停歇日期数（避免网格重叠导致重复计数）
+        long totalStopoverDays = df.filter(col("point_type").equalTo("stopover"))
+                .select(date_format(col("ts"), "yyyy-MM-dd"))
+                .distinct()
+                .count();
 
         Dataset<Row> summaryDF = spark.createDataFrame(
                 java.util.Arrays.asList(
                         org.apache.spark.sql.RowFactory.create(
+                                1L,
                                 Math.round(totalDistance * 10.0) / 10.0,
                                 Math.round(avgSpeed * 100.0) / 100.0,
                                 Math.round(maxSpeed * 100.0) / 100.0,
-                                Math.round(totalStopoverDays * 10.0) / 10.0
+                                (double) totalStopoverDays,
+                                new java.sql.Timestamp(System.currentTimeMillis()).toString()
                         )
                 ),
                 new StructType()
+                        .add("id", DataTypes.LongType)
                         .add("total_distance", DataTypes.DoubleType)
                         .add("avg_speed", DataTypes.DoubleType)
                         .add("max_speed", DataTypes.DoubleType)
                         .add("total_stopover_days", DataTypes.DoubleType)
+                        .add("update_time", DataTypes.StringType)
         );
 
         summaryDF.show(false);
@@ -244,7 +257,7 @@ public class SparkAnalyzer {
         System.out.println("  总里程: " + Math.round(totalDistance * 10.0) / 10.0 + " km");
         System.out.println("  平均时速: " + Math.round(avgSpeed * 100.0) / 100.0 + " km/h");
         System.out.println("  最快时速: " + Math.round(maxSpeed * 100.0) / 100.0 + " km/h");
-        System.out.println("  总停歇天数: " + Math.round(totalStopoverDays * 10.0) / 10.0 + " 天");
+        System.out.println("  总停歇天数: " + totalStopoverDays + " 天");
         System.out.println("  抽稀轨迹点: " + trackCount);
         System.out.println("  有效停歇点: " + stopoverCount);
         System.out.println("  散点采样数: " + scatterCount);
